// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled attr 1`] = `
.css-H1-15vt02v-1n5h3v0 {
  font-size: 48;
  margin: 4rem;
}

<h1
  className="css-H1-15vt02v-1n5h3v0"
  fontSize={48}
/>
`;

exports[`styled basic render 1`] = `
.css-H1-8xpzga-1e133rd {
  font-size: 20px;
}

<h1
  className="css-H1-8xpzga-1e133rd"
>
  hello world
</h1>
`;

exports[`styled call expression 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

<h1
  className="css-H1-13wdnau-xy96vj legacy__class"
>
  hello world
</h1>
`;

exports[`styled composition 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

.css-H2-vxb7tq-1gn1gp5 {
  font-size: 13.333333333333334;
}

<h1
  className="css-H1-13wdnau-xy96vj css-H2-vxb7tq-1gn1gp5 legacy__class"
>
  hello world
</h1>
`;

exports[`styled fragments 1`] = `
.css-H2-idm3bz-361gww {
  font-size: 32px;
}

.css-H1-1qd8mfb-1mxqzi0 {
  font-size: 20px;
  height: 64px;
  color: blue;
}

<h1
  className="css-H1-1qd8mfb-1mxqzi0 css-H2-idm3bz-361gww legacy__class"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled function in expression 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

.css-H2-vxb7tq-1wx98rf {
  font-size: 40;
}

<h1
  className="css-H1-13wdnau-xy96vj css-H2-vxb7tq-1wx98rf legacy__class"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled higher order component 1`] = `
.css-onyx-wn422p-oy3rok {
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  flex-direction: column;
  background-color: #7FC8D6;
}

.css-Content-13wdnau-1z6hk6 {
  font-size: 20px;
}

<div
  className="css-Content-13wdnau-1z6hk6 css-onyx-wn422p-oy3rok"
/>
`;

exports[`styled name 1`] = `
.css-FancyH1-1azfbv1-1fzd8kz {
  font-size: 20px;
}

<h1
  className="css-FancyH1-1azfbv1-1fzd8kz"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
.css-H1-ijh7uz-10q50rl {
  font-size: 12px;
}

<h1
  className="css-H1-ijh7uz-10q50rl"
>
  hello world
</h1>
`;

exports[`styled throws if undefined is passed as the component 1`] = `
"You are trying to create a styled element with an undefined component.
You may have forgotten to import it."
`;
